--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ Sign-Up! }}</title>
+    <title>{{ SignUp }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 
