--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -17,19 +17,33 @@
         <input class="button" id="go" type="submit" value="go!">
       </div>
     </div>
-    
+
     <div id="content">
-      <h1>Home</h1>
-      <div id="categories">
-        <ul>
-          <li>example category</li>
-          <li>example category</li>
-          <li>example category</li>
-        </ul>
-      </div>
+      <h1>Welcome to Free &amp; For Sale! </h1>
       <div id="testp">
-        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+        <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
         </p>
+      </div>
+      <div id="categories">
+        <u>Search by category</u><br>
+        <a href="/home">clothes</a><br>
+        <a href="/home">books</a><br>
+        <a href="/home">tech</a><br>
+        <a href="/home">furniture</a><br>
+      </div>
+      <div id="browse">
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
+        <div class="dummyProduct"></div>
       </div>
     </div>
   </body>
