fixed max browse section width

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -86,6 +86,7 @@ button{
   display: inline-block;
 }
 #browse{
+  max-width: 980px;
   border-radius: 20px;
   padding: 10px;
   margin-left: 220px;
