--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -12,20 +12,20 @@
 	 <h1 class='main title'> Welcome to MIT Free and For Sale </h1>
 	 <div class = 'login'>
 	 	<h1> Login </h1>
-	 	<form name="sign in" method = 'post' action = '/signin'>
+	 	<form name="sign in" method = 'post' action = '/'>
 	 		<ul>
 	 			<li> Username </li>
 	 			<li> <input type = 'text' placeholder = 'Username' name = 'username'> </li>
 
 	 			<li> Password </li>
 
-	 			<li> <input type = 'text' placeholder= 'password' name = 'password'> </li>
+	 			<li> <input type = 'text' placeholder= 'Password' name = 'password'> </li>
 
 	 			<li><button type = 'submit'>Login</button></li>
 	 		</ul>
 	 	</form>
 
-	 	<a href = '/signup'> Sign up </a>
+	 	<a href = '/signup'> SignUp </a>
 
 	 </div>
 	</body>
