--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -10,16 +10,16 @@
       <a href="/home">
         <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
       </a>
-      <button class="button" type="button">Logout</button>
-      <button class="button" type="button">Starred Items</button>
+      <button class="navbutton" type="button">Logout</button>
+      <button class="navbutton" type="button">Starred Items</button>
       <div id="search">
         <input id="searchbox" type="text" value="search">
-        <input class="button" id="go" type="submit" value="go!">
+        <input class="navbutton" id="go" type="submit" value="go!">
       </div>
     </div>
 
     <div id="content">
-      <h1>Welcome to Free &amp; For Sale! </h1>
+      <h1 id="title">Welcome to Free &amp; For Sale! </h1>
       <div id="testp">
         <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
         </p>
