--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -2,32 +2,48 @@
 <html>
   <head>
     <title>{{ title }}</title>
-    <link rel='stylesheet' href='/stylesheets/base.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
+   
   </head>
 
- <body> 
-	 <h1 class='main title'> Welcome to MIT Free and For Sale </h1>
-	 <div class = 'login'>
-	 	<h1> Login </h1>
-	 	<form name="sign in" method = 'post' action = '/signin'>
-	 		<ul>
-	 			<li> Username </li>
-	 			<li> <input type = 'text' placeholder = 'Username' name = 'username'> </li>
+	<body> 
+		<div id= 'nav'>
+    	<a href="/home">
+        <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="position:relative; top:20px; width:90px;height:90px;border:0;">
+      	</a>
 
-	 			<li> Password </li>
+      	<a href = '/signup'>
+      		<button class = 'button2' type = 'signup'>Sign up!</button>
+      	</a>
 
-	 			<li> <input type = 'text' placeholder= 'password' name = 'password'> </li>
+      	<h1 class = 'welcome' style = 'font-size:40pt;position:relative;top:30px;left:20px'> Welcome to MIT Free &amp; For Sale! </h1>
+      	<h2 style = 'font-size: 16pt; position:relative;top:15px;left:20px' class = 'subheading'> A site to buy, sell, trade, or just give away items created by MIT students for MIT students 
+    	</div>
 
-	 			<li><button type = 'submit'>Login</button></li>
-	 		</ul>
-	 	</form>
+    	<div style = 'position:relative; top:140px' id = 'subheader'>
+		
+		<img id="logo2" src="/images/beaverwebsite.png" alt="HTML tutorial">
+		</h2>
+		</div>
+		
+		<div style = 'position:relative; top:60px' class = 'login'>
 
-	 	<a href = '/signup'> Sign up </a>
+		 	<form name="sign in" method = 'post' action = '/home'>
+		 		<ul>
+		 			<li style = 'position:relative; right: 110px;font-size:17pt''> Email: </li>
+		 			<li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'email'> </li>
 
-	 </div>
+		 			<li style = 'position:relative; right: 88px;font-size:17pt''> Password: </li>
+
+		 			<li> <input style = 'height: 50px; font-size:20pt;' type = 'text' placeholder= 'password' name = 'password'> </li>
+
+		 			<li><button class="button" type = 'submit'>Login</button></li>
+		 		</ul>
+		 	</form>
+
+		 </div>
 	</body>
 </html>
 
