--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -12,8 +12,9 @@
       </a>
       <button class="navbutton" type="button">Logout</button>
       <button class="navbutton" type="button">Starred Items</button>
+      <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
       <div id="search">
-        <input id="searchbox" type="text" value="search">
+        <input class="inputbox" id="searchbox" type="text" placeholder="search">
         <input class="navbutton" id="go" type="submit" value="go!">
       </div>
     </div>
