--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -6,14 +6,30 @@
   </head>
 
  <body> 
-   <h1>Upload a new item to sell</h1>
-  <form name="newitem" method = 'post' action = '/uploaditem'>
-    <input type = 'text' placeholder = 'item name' name = 'itemname'><br>
-    <textarea rows="4" placeholder='description' name='description' cols="50"></textarea> <br>
-    <button type = 'submit'>Upload</button><br>
-  </form>
-</body>
+    <div id="nav">
+      <a href="/home">
+        <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
+      </a>
+      <button class="navbutton" type="button">Logout</button>
+      <button class="navbutton" type="button">Starred Items</button>
+      <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
+      <div id="search">
+        <input class="inputbox" id="searchbox" type="text" placeholder="search">
+        <input class="navbutton" id="go" type="submit" value="go!">
+      </div>
+    </div>
 
+    <div id="content">
+      <h1>List a new item to sell</h1>
+      <form name="newitem" method = 'post' action = '/uploaditem'>
+        <input id="itemname" class='inputbox' type='text' placeholder='item name' name='itemname'> 
+        &#36;&#32;<input class='inputbox' type="number" placeholder='price' name='price'>
+        <br>
+        <textarea id='itemdescription' rows="8" placeholder='description' name='description' cols="50"></textarea> <br>
+        <button id="submititem" type = 'submit'>list it!</button><br>
+      </form>
+    </div>
+  </body>
 </html>
 
 
