--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -26,7 +26,8 @@
         &#36;&#32;<input class='inputbox' type="number" placeholder='price' name='price'>
         <br>
         <textarea id='itemdescription' rows="8" placeholder='description' name='description' cols="50"></textarea> <br>
-        <button id="submititem" type = 'submit'>list it!</button><br>
+        <button class="contentbutton" type = 'submit'>list it!</button>&#32;
+        <button type="button" class="contentbutton" onclick="location.href='/home'">cancel</button><br>
       </form>
     </div>
   </body>
