--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Upload Item</title>
+    <title>New Item</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
 
@@ -20,7 +20,7 @@
     </div>
 
     <div id="content">
-      <h1>List a new item to sell</h1>
+      <h1>Submit a new item to sell</h1>
       <form name="newitem" method = 'post' action = '/uploaditem'>
         <input id="itemname" class='inputbox' type='text' placeholder='item name' name='itemname'> 
         &#36;&#32;<input class='inputbox' type="number" placeholder='price' name='price'>
