--- a/app/views/uploadsuccess.hbs
+++ b/app/views/uploadsuccess.hbs
@@ -21,7 +21,8 @@
     <div id='content'>
       <h1>Success!</h1>
       <p>Your item is now live.</p>
-      <button class="contentbutton" type="button" onclick="location.href='/home'">return home</button>
+      <button class="contentbutton" type="button" onclick="location.href='/home'">return home</button>&#32;
+      <button class="contentbutton" type="button" onclick="location.href='/newitem'">list another item</button>
     </div>
   </body>
 </html>
