new changes with passport

--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -11,7 +11,7 @@
     <div name="content">
       <h1>{{ title }} Form</h1>
 
-      <form name="signup" method="post" action="/adduser">
+      <form name="signup" method="post" action="/signup">
         <ul>
           <li>Name</li>
 
@@ -23,13 +23,13 @@
 
           <li>Email</li>
 
-          <li><input type="text" placeholder="Email" name="email"></li>
+          <li><input type="text" placeholder="Email" name="username"></li>
 
           <li>Password</li>
 
           <li><input type="text" placeholder="Password" name="password"></li>
 
-          <li><button type="submit">Submit</button>
+          <li><button type="submit">Sign Up</button>
         </ul>
       </form>
 
