--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -107,7 +107,7 @@ a:hover {
   display: inline-block;
 }
 #productcontent{
-  line-height: 200px;
+  /*line-height: 200px;*/
 }
 .contentbutton {
   margin-top: 10px;
@@ -128,7 +128,7 @@ a:hover {
   outline: 0;
 }
 
-#itemdescription{
+#description{
   border: solid 2px #eeeeee;
   border-top: solid 2px #9a9a9a;
   border-left: solid 2px #9a9a9a;
@@ -195,10 +195,17 @@ a:hover {
   border-radius: 15px;
   display: inline-block;
 }
+.tagtext{
+  display:inline-block;
+}
 .closetag{
+  display: inline-block;
   border: none;
   background-color: #878787;
   border-radius: 15px;
+}
+#hidethis {
+  color:#fff;
 }
 /*
 @media screen and (max-width: 700px){
