--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -6,20 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   </head>
 
- <body> 
-    <div id="nav">
-      <a href="/home">
-        <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
-      </a>
-      <button class="navbutton" type="button">Logout</button>
-      <button class="navbutton" type="button">Starred Items</button>
-      <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
-      <div id="search">
-        <input class="inputbox" id="searchbox" type="text" placeholder="search">
-        <input class="navbutton" id="go" type="submit" value="go!">
-      </div>
-    </div>
-
+  <body> 
+    {{> navbar}}
     <div id="content">
       <h1>Submit a new item to sell</h1>
       <div id="itemform">
