--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -10,7 +10,10 @@
       <a href="/home">
         <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
       </a>
-      <button class="navbutton" type="button">Logout</button>
+
+      <form name="logout" method = 'post' action = '/logout'>
+        <button class="navbutton" type="submit" >Logout</button>
+      </form>
       <button class="navbutton" type="button">Starred Items</button>
       <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
       <div id="search">
