updated sign up, fix item pop up, add category attribute

--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -34,15 +34,15 @@
 		<div style = 'position:relative; top:60px' class = 'login'>
 
 
-		 	<form name="sign in" method = 'post' action = '/login'>
+		 	<form name="sign in" method = 'post' action = '/home'>
 		 		<ul>
 		 			<li style = 'position:relative; right: 110px;font-size:17pt''> Email: </li>
-		 			<li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'username'> </li>
+		 			<li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'email'> </li>
 
 
 		 			<li style = 'position:relative; right: 88px;font-size:17pt''> Password: </li>
 
-		 			<li> <input style = 'height: 50px; font-size:20pt;' type = 'password' placeholder= 'password' name = 'password'> </li>
+		 			<li> <input style = 'height: 50px; font-size:20pt;' type = 'text' placeholder= 'password' name = 'password'> </li>
 
 		 			<li><button class="button" type = 'submit'>Login</button></li>
 		 		</ul>
