--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -15,7 +15,14 @@
         &#36;&#32;<input id='price' class='inputbox' type="number" placeholder='price' name='price'>
         <br>
         <textarea id='description' rows="8" placeholder='description' name='description' cols="50"></textarea> <br>
-      
+        
+        <select id='category' name = 'category'>
+          <option value="clothes">Clothes</option>
+          <option value="book">Book</option>
+          <option value="text">Text</option>
+          <option value="furniture">Furniture</option>
+        </select>
+
         <input id="inserttag" class='inputbox' type='text' placeholder='add tags' name='inserttag'>
         <button id="addtag" class="contentbutton" type='button'>add</button><br>
         <div id="tags"></div>
