--- a/app/views/partials/navbar.hbs
+++ b/app/views/partials/navbar.hbs
@@ -5,8 +5,8 @@
   <button class="navbutton" type="button">Logout</button>
   <button class="navbutton" type="button">Starred Items</button>
   <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
-  <div id="search">
-    <input class="inputbox" id="searchbox" type="text" placeholder="search">
+  <form id="search" method='post' action="/searchresults">
+    <input class="inputbox" id="searchbox" type="text" placeholder="search" name="term">
     <input class="navbutton" id="go" type="submit" value="go!">
-  </div>
+  </form>
 </div>
