added category filtering

--- a/app/views/home.hbs
+++ b/app/views/home.hbs
@@ -16,10 +16,10 @@
       </div>
       <div id="categories">
         <u>Search by category</u><br>
-        <a href="/home">clothes</a><br>
-        <a href="/home">books</a><br>
-        <a href="/home">tech</a><br>
-        <a href="/home">furniture</a><br>
+        <a href="/clothes">clothes</a><br>
+        <a href="/books">books</a><br>
+        <a href="/tech">tech</a><br>
+        <a href="/furniture">furniture</a><br>
       </div>
       <div id="browse">
         {{#each item}}
