--- a/app/views/partials/navbar.hbs
+++ b/app/views/partials/navbar.hbs
@@ -2,7 +2,25 @@
   <a href="/home">
     <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
   </a>
-  <button class="navbutton" type="button">Logout</button>
+
+  {{#if boolean}}
+    <form name="logout" method = 'post' action = '/logout'>
+      <button class="navbutton" type="submit" >Logout</button>
+    </form>
+    <h>Welcome {{ name }}</h>
+  {{else}}
+    <form name="logout" method = 'post' action = '/login'>
+      <button class="navbutton" type="submit" >Login</button>
+    </form>
+  {{/if}}
+
+<!--   <form name="logout" method = 'post' action = '/logout'>
+    {{#if boolean}}
+      <button class="navbutton" type="submit" >Logout</button>
+    {{else}}
+      <button class="navbutton" type="submit" >Login</button>
+    {{/if}} -->
+  </form>
   <button class="navbutton" type="button">Starred Items</button>
   <button class="navbutton" type="button" onclick="location.href='/newitem'">List an Item</button>
   <div id="search">
