--- a/app/views/index.hbs
+++ b/app/views/index.hbs
@@ -37,7 +37,7 @@
 		 	<form name="sign in" method = 'post' action = '/home'>
 		 		<ul>
 		 			<li style = 'position:relative; right: 110px;font-size:17pt''> Email: </li>
-		 			<li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'email'> </li>
+		 			<li> <input style = 'height: 50px; font-size:20pt' type = 'text' placeholder = 'email' name = 'username'> </li>
 
 
 		 			<li style = 'position:relative; right: 88px;font-size:17pt''> Password: </li>
