--- a/app/views/signup.hbs
+++ b/app/views/signup.hbs
@@ -27,9 +27,9 @@
 
           <li>Password</li>
 
-          <li><input type="password" placeholder="Password" id="password" required></li>
+          <li><input type="password" placeholder="Password" name="password" required></li>
 
-          <li> <input type='password' placeholder ="Confirm Password" id = 'confirm_password' required></li>
+          <li> <input type='password' placeholder ="Confirm Password" id = 'password' required></li>
           <script src="/scripts/confirmpass.js"></script>
           <li><button type="submit">Sign Up</button>
         </ul>
