items tagged with user who uploaded

--- a/app/views/newitem.hbs
+++ b/app/views/newitem.hbs
@@ -9,7 +9,7 @@
   <body> 
     {{> navbar}}
     <div id="content">
-      <h1>Submit a new item to sell</h1>
+      <h1>Post a new item</h1>
       <div id="itemform">
         <input id="itemname" class='inputbox' type='text' maxlength="15" placeholder='item name' name='itemname' required> 
         &#36;&#32;<input id='price' class='inputbox' type="number" placeholder='price' name='price' required>
