--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,7 +22,7 @@
         <a href="/furniture">furniture</a><br>
       </div>
       <div id="browse">
-        {{#each item}}
+        {{#each items}}
           {{> item_partial}}
         {{/each }}
       </div>
