--- a/views/partials/item_partial.hbs
+++ b/views/partials/item_partial.hbs
@@ -7,11 +7,13 @@
 
   <div id="{{itemname}}" class="overlay">
     <div class="popup">
-      <h2>  {{itemname}}</h2>
+      <h2>{{itemname}}</h2>
       &#36;&#32; {{price}}
       <a class="close" href="#">&times;</a>
       <div class="popupcontent">
         {{description}}
+        <br><br>
+        posted by {{user}}
       </div>
     </div>
   </div>
