--- a/views/newitem.hbs
+++ b/views/newitem.hbs
@@ -18,7 +18,7 @@
         
         <select id='category' name = 'category' required>
           <option value="clothes">Clothes</option>
-          <option value="book">Book</option>
+          <option value="book">Books</option>
           <option value="tech">Tech</option>
           <option value="furniture">Furniture</option>
         </select>
