minor changes to search/ added basic profile

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,6 +10,7 @@
       <div id="dropdown" class="dropdown-content">
         <button class="droppedbtn" type="button" onclick="location.href='/newitem'">List an Item</button>
         <button class="droppedbtn" type="button">Starred Items</button>
+        <button class="droppedbtn" type="button" onclick="location.href='/profile'">Profile</button>
         <form name="logout" method = 'post' action = '/logout'>
           <button class="droppedbtn" type="submit" >Logout</button>
         </form>
