starring items registers

--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -6,7 +6,7 @@
 
   <div id="{{itemname}}" class="overlay">
     <div class="popup">
-      <div class='star' id='star{{id}}'>{{starred '58864cdef70a6f78c82621f2' 'rew@mit.edu'}}</div>
+      <div class='star' id='star{{id}}'>&#9733;</div>
       <h2>{{itemname}}</h2>
       &#36;&#32; {{price}}
       <a class="close" href="#">&times;</a>
