--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,26 +22,12 @@
         <a href="/tech">tech</a><br>
         <a href="/furniture">furniture</a><br>
       </div>
-      <div id='sortbox'>
-        <u>Sort by</u><br>
-        <select id='sort' name = 'sort' required>
-          {{#if search}}
-          <option value="dateON">Date: old to new</option>
-          <option value="dateNO">Date: new to old</option>
-          <option value="priceLH">Price: low to high</option>
-          <option value="priceHL">Price: high to low</option>
-          <option value="relevance">Relevance</option>
-          {{else}}
-          <option value="dateON">Date: old to new</option>
-          <option value="dateNO">Date: new to old</option>
-          <option value="priceLH">Price: low to high</option>
-          <option value="priceHL">Price: high to low</option>
-          {{/if}}
-        </select>
-      </div>
       <div id="browse">
-        {{#each items}}
-          {{> item_partial}}
+        {{#each starItems}}
+          {{> starred_item_partial}}
+        {{/each }}
+        {{#each otherItems}}
+          {{> unstarred_item_partial}}
         {{/each }}
       </div>
     </div>
