--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,5 +32,6 @@
       </div>
     </div>
   <script src="/scripts/sortby.js"></script>
+  <script src="/scripts/staritem.js"></script>
   </body>
 </html>
