--- a/views/partials/unstarred_item_partial.hbs
+++ b/views/partials/unstarred_item_partial.hbs
@@ -6,7 +6,7 @@
 
   <div id="{{itemname}}" class="overlay">
     <div class="popup">
-      <div class='star' id='star{{id}}'>&#9734;</div>
+      <div class='blankstar' id='blankstar{{id}}'>&#9734;</div>
       <h2>{{itemname}}</h2>
       &#36;&#32; {{price}}
       <a class="close" href="#">&times;</a>
