starred items page works

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -9,7 +9,7 @@
       <button class='dropbtn' onclick="dropdown()">Welcome, {{name}}!</button>
       <div id="dropdown" class="dropdown-content">
         <button class="droppedbtn" type="button" onclick="location.href='/newitem'">List an Item</button>
-        <button class="droppedbtn" type="button">Starred Items</button>
+        <button class="droppedbtn" type="button" onclick="location.href='/starreditems'">Starred Items</button>
         <button class="droppedbtn" type="button" onclick="location.href='/profile'">Profile</button>
         <form name="logout" method = 'post' action = '/logout'>
           <button class="droppedbtn" type="submit" >Logout</button>
