--- a/views/searchresults.hbs
+++ b/views/searchresults.hbs
@@ -10,10 +10,14 @@
     <div id="content">
       <h1 id="title">Search results for "{{term}}" </h1>
       <div id="products">
-        {{#each items}}
-          {{> item_partial}}
+        {{#each starred}}
+          {{> starred_item_partial}}
+        {{/each }}
+        {{#each unstarred}}
+          {{> unstarred_item_partial}}
         {{/each }}
       </div>
     </div>
+    <script src="/scripts/staritem.js"></script>
   </body>
 </html>
