--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,7 @@
 	<body> 
 		<div id= 'nav'>
     	<a href="/home">
-        <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="position:relative; top:20px; width:90px;height:90px;border:0;">
+        <img id="logo" src="/images/beaverlogo.png" alt="HTML tutorial" style="position:relative; top:20px; width:90px;height:90px;border:0;">
       	</a>
 
 
@@ -27,7 +27,7 @@
 
     	<div style = 'position:relative; top:140px' id = 'subheader'>
 		
-		<img id="logo2" src="/images/beaverwebsite.png" alt="HTML tutorial">
+		<img id="logo2" src="/images/beaverlogo.png" alt="HTML tutorial">
 		</h2>
 		</div>
 		
