--- a/views/uploadsuccess.hbs
+++ b/views/uploadsuccess.hbs
@@ -8,7 +8,7 @@
  <body> 
     <div id="nav">
       <a href="/home">
-        <img id="logo" src="/images/beaverwebsite.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
+        <img id="logo" src="/images/beaverlogo.png" alt="HTML tutorial" style="width:60px;height:60px;border:0;">
       </a>
       <button class="navbutton" type="button">Logout</button>
       <button class="navbutton" type="button">Starred Items</button>
