--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -13,9 +13,12 @@
 
       <form name="signup" method="post" action="/signup">
         <ul>
-          <li>Name</li>
+          <li>First Name</li>
 
-          <li><input type="text" placeholder="Name" name="name" required></li>
+          <li><input type="text" placeholder="First name" name="firstname" required></li>
+          <li>Last Name</li>
+
+          <li><input type="text" placeholder="Last name" name="lastname" required></li>
 
           <li>Venmo</li>
 
