--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ title }}</title>
+    <title>beaver++</title>
     <link rel='stylesheet' href='/stylesheets/loginstyle.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/ajax.js"></script>
