--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -7,10 +7,10 @@
 </div>
 
 <div class= 'hiddenconfirm' id='hiddenconfirm{{id}}' style='display:none'>
-  To confirm deletion of <b>{{itemname}}</b>, enter the selected item's ID as displayed in the list above: <br>
+  To confirm deletion of <b>{{itemname}}</b>, enter the item's ID as displayed above: <br>
   <form class = 'manage_elt' name="manageitem" method='post' action='/deleteitem'>
     <input class = 'manage_elt' type='text' name ='itemid' placeholder='item ID'>
     <input class='manage_elt' id='deletebtn' type='submit' value='confirm'>
-    <div class='canceldelete' id='canceldelete{{id}}'>cancel</div><br>
+    <button class='canceldelete' id='canceldelete{{id}}'>cancel</button><br>
   </form>
 </div>
