profile pages for all users, accessible from items they posted

--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -11,6 +11,6 @@
   <form class = 'manage_elt' name="manageitem" method='post' action='/deleteitem'>
     <input class = 'manage_elt' type='text' name ='itemid' placeholder='item ID'>
     <input class='manage_elt' id='deletebtn' type='submit' value='confirm'>
-    <button class='canceldelete' id='canceldelete{{id}}'>cancel</button><br>
+    <button type='button' class='canceldelete' id='canceldelete{{id}}'>cancel</button><br>
   </form>
 </div>
