--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -13,7 +13,7 @@
       <div class="popupcontent">
         {{description}}
         <br><br>
-        posted by {{firstname}} {{lastname}} <br> ({{user}})
+        posted by <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br> ({{user}})
       </div>
       <div style="display:none" class='id' id="{{id}}"></div>
     </div>
