--- a/views/partials/starred_item_partial.hbs
+++ b/views/partials/starred_item_partial.hbs
@@ -2,6 +2,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <div>
     <a id="productcontent" href="#{{itemname}}"> {{itemname}}</a>
+    <img src="/uploads/{{picture}}" />
   </div>
 
   <div id="{{itemname}}" class="overlay">
@@ -12,6 +13,7 @@
       <a class="close" href="#">&times;</a>
       <div class="popupcontent">
         {{description}}
+        <img src="/uploads/{{picture}}" />
         <br><br>
         posted by <a href='/profile/{{userid}}'> {{firstname}} {{lastname}} </a><br> ({{user}})
       </div>
