--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,6 +127,10 @@ p{
   border-radius: 15px;
   display: inline-block;
 }
+.product img {
+  max-width: 100%;
+  max-height: 100%;
+}
 #productcontent{
   /*line-height: 200px;*/
 }
