--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel='shortcut icon' type='image/png' href='/images/modifiedbeaver.png' />
   </head>
 
   <body>
